# nexa-mfrr-nordic-eam

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SETUP.md  pyproject.toml
.claude/commands/: checks.md  pr.md  release.md  rmbranch.md
.claude/tasks/: task-01-gs-technical-links.md
.github/workflows/: ci.yml  publish.yml
examples/: energinet_complex_bids.ipynb  energinet_simple_bids.ipynb  fingrid_bids_and_deserialization.ipynb  fingrid_xml_roundtrip.ipynb  gs_tax_pricing.ipynb  statnett_bid_preparation.ipynb  svk_linked_bids.ipynb  technical_link_ordering.ipynb
examples/data/: asset_battery.json  asset_hydro.json  asset_wind.json  day_ahead_prices.csv  fingrid_reserve_bid.xml
reference/: Bid-Submission.md  TSO.md
reference/schema/: iec62325-451-7-reservebiddocument_v7_4.xsd  nbm-ediel-reservebiddocument-7-2.xsd
reference/schema/examples/sn/activation/: SN_Activation_MarketDocument_Direct_Request.xml  SN_Activation_MarketDocument_Direct_Response.xml  SN_Activation_MarketDocument_Scheduled_Request.xml  SN_Activation_MarketDocument_Scheduled_Response.xml
reference/schema/examples/sn/bid_acknowledgement/: SN_Negative_Acknowledgement_MarketDocument_Document_level.xml  SN_Negative_Acknowledgement_MarketDocument_TimeSeries_level.xml  SN_Positive_Acknowledgement_MarketDocument.xml
reference/schema/examples/sn/bid_complex/: SN_Complex_Exclusive_ReserveBid_MarketDocument.xml  SN_Complex_Inclusive_ReserveBid_MarketDocument.xml  (+1 more)
src/nexa_mfrr_eam/: __init__.py  config.py  exceptions.py  link_ordering.py  pricing.py  timing.py  types.py
src/nexa_mfrr_eam/bids/: __init__.py  complex.py  linked.py  simple.py  validation.py
src/nexa_mfrr_eam/documents/: __init__.py  reserve_bid.py
src/nexa_mfrr_eam/tso/: __init__.py  base.py  energinet.py  fingrid.py  statnett.py  svk.py
src/nexa_mfrr_eam/xml/: __init__.py  deserialize.py  namespaces.py  serialize.py
tests/: conftest.py  test_bids.py  test_complex.py  test_config.py  test_documents.py  test_link_ordering.py  test_linked.py  test_pricing.py  test_timing.py  test_tso_fingrid.py  test_xml_deserialize.py  test_xml_serialize.py
(+22 files in other folders)
