[tool.poetry]
name = "nexa-mfrr-nordic-eam"
version = "0.2.0b1"
description = "Python library for building, validating, and serializing mFRR energy activation market bids for the Nordic TSOs"
authors = ["Phase Nexa <hello@phasenexa.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/phasenexa/nexa-mfrr-nordic-eam"
repository = "https://github.com/phasenexa/nexa-mfrr-nordic-eam"
keywords = ["mfrr", "nordic", "energy", "balancing", "cim", "xml", "eam"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "nexa_mfrr_eam", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0"
lxml = "^5.0"
pandas = {version = "^2.0", optional = true}

[tool.poetry.extras]
pandas = ["pandas"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
ruff = "^0.4"
mypy = "^1.10"
lxml-stubs = "^0.5"
nbmake = "^1.5"
jupyter = "^1.0"
pandas = "^2.0"
pandas-stubs = "^2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "B", "SIM"]
ignore = [
    "ANN101",  # Missing type annotation for `self`
    "ANN102",  # Missing type annotation for `cls`
]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=nexa_mfrr_eam --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/nexa_mfrr_eam"]
omit = ["*/pandas.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
